Fix MR sidebar rendering on mobile

--- a/app/assets/stylesheets/framework/common.scss
+++ b/app/assets/stylesheets/framework/common.scss
@@ -93,6 +93,7 @@
 
 .tab-content {
   overflow: visible;
+  isolation: isolate;
 }
 
 pre {
